<resources>
    <string name="app_name">WeChat</string>
    <string name="lbl_landing_text1">Text your friends and share moments</string>
    <string name="lbl_landing_text2">End-to-end secured messaging app with Social Elements</string>
    <string name="lbl_sign_up">Sign Up</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_welcome">Welcome !</string>
    <string name="lbl_login_to_continue">Login to continue</string>
    <string name="hint_enter_your_phone_number">Enter Your Phone Number</string>
    <string name="hint_enter_your_password">Enter Your Password</string>
    <string name="lbl_forget_password">Forget Password?</string>
    <string name="lbl_hi">Hi !</string>
    <string name="lbl_create_a_new_account">Create a new account</string>
    <string name="lbl_get_otp">Get OTP</string>
    <string name="lbl_don_t_receive_the_otp">Don\'t receive the OTP?</string>
    <string name="lbl_resend_code">Resend Code</string>
    <string name="lbl_verify">Verify</string>
    <string name="lbl_enter_your_name">Enter Your Name</string>
    <string name="lbl_date_of_birth">Date of Birth</string>
    <string name="lbl_gender">Gender</string>
    <string name="lbl_male">Male</string>
    <string name="lbl_female">Female</string>
    <string name="lbl_other">Other</string>
    <string name="lbl_agree_to_term_and_service">Agree To Term And Service</string>
    <string name="lbl_agree_to">Agree To</string>
    <string name="lbl_term_and_service">Term And Service</string>
    <string name="lbl_ok">OK</string>
    <string name="lbl_oops_something_went_wrong_please_try_again_later">Oops, something went wrong, please try again later</string>
    <string name="lbl_error">Error !</string>
    <string name="lbl_code_sent">Code was sent !</string>
    <string name="lbl_moment">Moment</string>
    <string name="lbl_moments">Moments</string>
    <string name="lbl_chat">Chat</string>
    <string name="lbl_contacts">Contacts</string>
    <string name="lbl_me">Me</string>
    <string name="lbl_settings">Settings</string>

    <array name="Days">
        <item>2022</item>
    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_create">Create</string>
    <string name="lbl_new_moment">New Moment</string>
    <string name="hint_what_s_in_your_mind">What\'s in your mind?</string>
    <string name="lbl_bookmarked_moments"><u>Bookmarked Moments</u></string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_chats">Chats</string>
    <string name="lbl_active_now">Active Now</string>
    <string name="hint_type_a_message">Type a message</string>
    <string name="lbl_new_group">New Group</string>
    <string name="lbl_group_name">Group Name</string>
    <string name="lbl_tap_to_scan">Tap to Scan</string>
    <string name="lbl_share_qr">Scan the QR code to add your friend in contact.</string>
    <string name="lbl_close">Close</string>
</resources>