<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgBack"
        android:layout_width="@dimen/margin_xxlarge"
        android:layout_height="@dimen/margin_xxlarge"
        android:padding="@dimen/padding_backImage"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginVertical="@dimen/margin_medium"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llWelcome"
        android:orientation="vertical"
        android:layout_below="@id/imgBack"
        android:layout_marginHorizontal="@dimen/margin_xlarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/lbl_welcome"
            android:fontFamily="@font/poppins_bold"
            android:textSize="@dimen/text_heading_2x"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/lbl_login_to_continue"
            android:fontFamily="@font/poppins_medium"
            android:textSize="@dimen/text_regular_2x"
            android:textColor="@color/colorSmallText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgWelcome"
        app:srcCompat="@drawable/ic_welcome"
        android:layout_width="@dimen/width_welcome_img"
        android:layout_height="@dimen/height_welcome_img"
        android:layout_marginTop="@dimen/margin_xxlarge"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/llWelcome"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPhone"
        android:layout_below="@id/imgWelcome"
        android:layout_marginHorizontal="@dimen/margin_xlarge"
        android:layout_width="match_parent"
        app:hintTextColor="@color/colorSecondaryText"
        app:hintTextAppearance="@style/InputTextLabel"
        android:hint="@string/hint_enter_your_phone_number"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editPhone"
            android:layout_width="match_parent"
            android:backgroundTint="@color/white"
            android:textColor="@color/colorPrimaryLight"
            android:paddingStart="0dp"
            android:inputType="phone"
            android:paddingTop="@dimen/margin_xlarge"
            android:paddingEnd="0dp"
            android:paddingBottom="@dimen/margin_small"
            android:layout_height="wrap_content"
            tools:ignore="RtlSymmetry" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_below="@id/tilPhone"
        android:layout_marginHorizontal="@dimen/margin_xlarge"
        android:layout_width="match_parent"
        android:textColor="@color/colorPrimaryLight"
        app:hintTextColor="@color/colorSecondaryText"
        android:hint="@string/hint_enter_your_password"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:backgroundTint="@color/white"
            android:paddingStart="0dp"
            android:inputType="textPassword"
            android:paddingTop="@dimen/margin_xlarge"
            android:paddingEnd="0dp"
            android:paddingBottom="@dimen/margin_small"
            android:layout_height="wrap_content"
            tools:ignore="RtlSymmetry" />
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lblForgetPassword"
        android:layout_below="@id/tilPassword"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/margin_xlarge"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:background="?attr/selectableItemBackground"
        android:paddingHorizontal="@dimen/margin_medium"
        android:clickable="true"
        android:text="@string/lbl_forget_password"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/colorPrimaryLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_below="@id/lblForgetPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_xxlarge"
        android:text="@string/lbl_login"
        style="@style/Widget.Material3.Button.TonalButton"
        android:textColor="@color/white"
        app:backgroundTint="@color/colorPrimary"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/margin_medium"
        android:textSize="@dimen/text_regular"
        android:textStyle="bold"
        android:layout_width="@dimen/width_btn"
        android:layout_height="@dimen/height_btn"/>

</RelativeLayout>